--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WoodCraft Furniture — Premium Home & Office Furniture</title>
-
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" />
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BeautyHub - Premium Cosmetics</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXVNL8GMQE"></script>
   <script>
@@ -25,144 +23,110 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MZ9TM2F5');
   </script>
+
 </head>
-
 <body>
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MZ9TM2F5"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-
-<header class="site-header">
-  <div class="container nav">
-    <a href="#home" class="brand">Wood<span>Craft</span></a>
-    <nav class="nav-links">
-      <a class="nav-link" href="#home">Home</a>
-      <a class="nav-link" href="#services">Collections</a>
-      <a class="nav-link" href="#features">Why Us</a>
-      <a class="nav-link" href="#pricing">Packages</a>
-      <a class="nav-link" href="#contact">Contact</a>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="logo">BeautyHub <i class="fas fa-palette"></i></div>
+        <ul class="nav-list" id="nav-list">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#collections">Collections</a></li>
+            <li><a href="#cart" id="cart-link">Cart (<span id="cart-count">0</span>)</a></li>
+            <li><a href="#wishlist">Wishlist</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="burger" id="burger">
+            <div class="layer"></div>
+            <div class="layer"></div>
+            <div class="layer"></div>
+        </div>
     </nav>
-    <button id="ctaBtn" class="btn primary small">Get Quote</button>
-  </div>
-</header>
 
-<!-- HERO -->
-<section id="home" class="hero">
-  <div class="container hero-grid">
-    <div class="hero-copy">
-      <h1>Premium Furniture Crafted for Comfort & Style</h1>
-      <p>Custom home & office furniture using premium wood and modern designs.</p>
-      <div class="hero-actions">
-        <a href="#contact" class="btn primary" id="heroCta">Free Consultation</a>
-        <a href="#services" class="btn ghost">View Collection</a>
-      </div>
-      <ul class="hero-meta">
-        <li>✓ Solid Wood</li>
-        <li>✓ Custom Design</li>
-        <li>✓ Doorstep Delivery</li>
-      </ul>
+    <!-- Overlay -->
+    <div class="overlay" id="overlay"></div>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="banner">
+            <h1>Discover Premium Cosmetics</h1>
+            <p>Serums, Moisturizers, Makeup & More for Radiant Skin</p>
+            <a href="#collections" class="shop-btn">Shop Now</a>
+        </div>
+    </section>
+
+    <!-- Products Section -->
+    <section id="collections" class="products">
+        <h2>Our Collections</h2>
+        <div id="product-list" class="product-grid"></div>
+    </section>
+
+    <!-- Cart Sidebar -->
+    <div id="cart-sidebar" class="sidebar">
+        <div class="close-cart" id="close-cart"><i class="fas fa-times"></i></div>
+        <h2>My Cart</h2>
+        <div id="cart-items" class="cart-content"></div>
+        <div class="total">Total: $<span id="total-amount">0</span></div>
+        <button id="buy-now" class="btn">Buy Now</button>
     </div>
 
-    <div class="hero-media alt-block">
-      <div class="stat">
-        <div class="stat-value">10+</div>
-        <div class="stat-label">Years Experience</div>
-      </div>
-      <div class="stat">
-        <div class="stat-value">5000+</div>
-        <div class="stat-label">Happy Customers</div>
-      </div>
-      <p class="hint">Trusted across India</p>
+    <!-- Contact Section -->
+<section id="contact" class="contact">
+    <div class="contact-container">
+        <h2>Get In Touch</h2>
+        <div class="contact-content">
+            <div class="contact-info">
+                <div class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <div>
+                        <h3>Any Queries?</h3>
+                        <p>Mail to: <a href="mailto:support@beautyhub.com">support@beautyhub.com</a></p>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-phone"></i>
+                    <div>
+                        <h3>Phone</h3>
+                        <p>+91 98765 43210</p>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <div>
+                        <h3>Address</h3>
+                        <p>Chennai, Tamil Nadu<br>India - 600001</p>
+                    </div>
+                </div>
+            </div>
+            <form class="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" rows="5" required></textarea>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
+        </div>
     </div>
-  </div>
 </section>
 
-<!-- VIDEO -->
-<section class="section">
-  <div class="container">
-    <h2 class="section-title">Our Craftsmanship</h2>
-    <video id="sampleVideo" controls poster="https://images.pexels.com/photos/276583/pexels-photo-276583.jpeg">
-      <source src="https://videos.pexels.com/video-files/276583/276583-hd_1920_1080_30fps.mp4" type="video/mp4">
-    </video>
-  </div>
-</section>
-
-<!-- SERVICES -->
-<section id="services" class="section">
-  <div class="container">
-    <h2 class="section-title">Our Collections</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Home Furniture</h3>
-        <p>Sofas, Beds, Dining & Wardrobes</p>
-      </div>
-      <div class="card">
-        <h3>Office Furniture</h3>
-        <p>Chairs, Workstations & Cabins</p>
-      </div>
-      <div class="card">
-        <h3>Custom Furniture</h3>
-        <p>Designed exactly to your space</p>
-      </div>
+    <!-- Checkout Modal -->
+    <div id="form-modal" class="modal">
+        <div class="form-content">
+            <h2>Checkout</h2>
+            <form id="checkout-form">
+                <input type="text" id="name" placeholder="Full Name" required>
+                <input type="tel" id="phone" placeholder="Phone Number" required>
+                <textarea id="address" placeholder="Delivery Address" required></textarea>
+                <select id="payment" required>
+                    <option value="">Select Payment</option>
+                    <option value="cod">Cash on Delivery</option>
+                    <option value="card">Credit/Debit Card</option>
+                    <option value="upi">UPI</option>
+                </select>
+                <button type="submit" class="btn">Place Order</button>
+            </form>
+        </div>
     </div>
-  </div>
-</section>
 
-<!-- FEATURES -->
-<section id="features" class="section alt">
-  <div class="container">
-    <h2 class="section-title">Why Choose Us</h2>
-    <div class="cards">
-      <div class="card"><h3>Premium Wood</h3><p>Long-lasting materials</p></div>
-      <div class="card"><h3>Custom Design</h3><p>Your style, your way</p></div>
-      <div class="card"><h3>End-to-End</h3><p>Design to installation</p></div>
-    </div>
-  </div>
-</section>
-
-<!-- PRICING -->
-<section id="pricing" class="section">
-  <div class="container">
-    <h2 class="section-title">Packages</h2>
-    <div class="pricing">
-      <div class="price-card">
-        <h3>Essential Home</h3>
-        <p class="price">₹79,000+</p>
-      </div>
-      <div class="price-card featured">
-        <h3>Premium Living</h3>
-        <p class="price">₹1,89,000+</p>
-      </div>
-      <div class="price-card">
-        <h3>Corporate</h3>
-        <p class="price">Custom</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CONTACT -->
-<section id="contact" class="section">
-  <div class="container">
-    <h2 class="section-title">Get Your Furniture Designed</h2>
-    <form id="contactForm" class="form">
-      <input type="text" placeholder="Name" required>
-      <input type="email" placeholder="Email" required>
-      <textarea placeholder="Your Requirement"></textarea>
-      <input type="file" id="attachment">
-      <button class="btn primary wide">Submit</button>
-    </form>
-    <div id="fileMeta"></div>
-  </div>
-</section>
-
-<footer class="site-footer">
-  <div class="container">
-    <p>© 2026 WoodCraft Furniture. All rights reserved.</p>
-  </div>
-</footer>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
